--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="./logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Snap-It</title>
+  <title>Wee</title>
 </head>
 
 <body>
